# iceprincess-opencv

./: CMakeLists.txt
config/: default.xml
src/: calibrate.cpp  detect.cpp  generate.cpp
